Try to fix image stretching issue on mobile

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -60,6 +60,10 @@ img {
 
 .card img {
   height: 100%;
+  width: auto;
+  object-fit: cover;
+  object-position: center;
+  max-width: 100%;
 }
 
 .carousel-nav button {
